update GameService.java